--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "dev": "npx tailwindcss -i ./style.css. -o ./css/output.css",
-    "watch": "npx tailwindcss  -i ./style.css -o ./demo6/output.css --watch",
+    "watch": "npx tailwindcss  -i ./style.css -o ./BTVN/output.css --watch",
     "build" : "NODE_ENV=production npx tailwindcss -i ./style.css -o ./css/output.css"
   },
   "devDependencies": {
